--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="keywords" content="" />
     <meta name="author" content="" />
     <meta name="robots" content="" />
-    <meta name="description" content="Industry - Factory & Industrial HTML Template" />
-    <meta property="og:title" content="Industry - Factory & Industrial HTML Template" />
-    <meta property="og:description" content="Industry - Factory & Industrial HTML Template" />
+    <meta name="description" content="Spiralweld" />
+    <meta property="og:title" content="Spiralweld" />
+    <meta property="og:description" content="Spiralweld" />
     <meta property="og:image" content="social-image.png" />
     <meta name="format-detection" content="telephone=no" />
 
